--- a/index.html
+++ b/index.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Breadth Indicators</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Breadth Indicators Dashboard</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 20px;
+      padding: 20px;
     }
-    .chart-container {
-      display: flex;
-      justify-content: space-between;
-      gap: 20px;
-    }
-    canvas {
-      width: 100% !important;
-      max-width: 600px;
-      height: 300px !important;
+    h1 {
+      text-align: center;
     }
     .controls {
+      text-align: center;
       margin-bottom: 20px;
+    }
+    .chart-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+    }
+    .chart-container {
+      width: 100%;
+      max-width: 400px;
     }
   </style>
 </head>
 <body>
-
-  <h2>Breadth Indicators Dashboard</h2>
-
+  <h1>Breadth Indicators Dashboard</h1>
   <div class="controls">
-    <label for="daysInput">Select number of days to view:</label>
-    <input type="number" id="daysInput" value="60" min="1" max="375">
-    <button onclick="loadCharts()">Update Charts</button>
+    <label for="days">Select number of days to view:</label>
+    <input type="number" id="days" value="60" min="1" max="375"/>
   </div>
-
-  <div class="chart-container">
-    <canvas id="chart10"></canvas>
-    <canvas id="chart50"></canvas>
-    <canvas id="chart200"></canvas>
+  <div class="chart-grid">
+    <div class="chart-container"><canvas id="chart1"></canvas></div>
+    <div class="chart-container"><canvas id="chart2"></canvas></div>
+    <div class="chart-container"><canvas id="chart3"></canvas></div>
+    <div class="chart-container"><canvas id="chart4"></canvas></div>
+    <div class="chart-container"><canvas id="chart5"></canvas></div>
+    <div class="chart-container"><canvas id="chart6"></canvas></div>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
