--- a/index.html
+++ b/index.html
@@ -6,10 +6,37 @@
   <title>Breadth Indicators Dashboard</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    canvas { width: 100%; height: 300px; }
-    .chart-row { display: flex; flex-wrap: wrap; gap: 20px; margin-bottom: 40px; }
-    .chart-container { flex: 1 1 30%; }
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      margin: 0;
+    }
+
+    h1 {
+      margin-bottom: 10px;
+    }
+
+    canvas {
+      width: 100% !important;
+      height: 350px !important;
+    }
+
+    .chart-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+      justify-content: space-between;
+      margin-bottom: 40px;
+    }
+
+    .chart-container {
+      flex: 1 1 calc(33.333% - 20px);
+      min-width: 300px;
+    }
+
+    #daySelector {
+      margin-bottom: 30px;
+    }
   </style>
 </head>
 <body>
